Refatorado lógica do sorteio, passando a fazer o nivelamento correto.